--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+
 wheel
 aiohttp
 aiofiles
@@ -48,6 +49,7 @@ speedtest-cli>=2.0.2
 sqlalchemy<=1.3.23
 telethon>=1.14.0 
 telethon-session-sqlalchemy>=0.2.6
+telethon.sync
 urbandict>=0.5
 wikipedia>=1.4.0
 coffeehouse>=2.1.0
