--- a/requirements.txt
+++ b/requirements.txt
@@ -47,8 +47,8 @@ requests>=2.18.4
 search-engine-parser>=0.6.1
 speedtest-cli>=2.0.2
 sqlalchemy<=1.3.23
-telethon>=1.14.0 
-telethon-session-sqlalchemy>=0.2.6
+telethon
+telethon-session-sqlalchemy
 urbandict>=0.5
 wikipedia>=1.4.0
 coffeehouse>=2.1.0
